--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-  	"depot/depot": "0.0.*@dev"
+  	"redaktor/depot": "0.0.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
