--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "redaktor/depot": "0.0.*@dev",
-        "twitter/bootstrap": "v2.3.1"
+        "redaktor/depot": "dev-master",
+        "twitter/bootstrap": "v2.3.1",
+        "sanpi/twitter-bootstrap-installer": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
@@ -23,9 +24,14 @@
     "autoload": {
         "psr-0": { "Depot": "src" }
     },
+    "scripts": {
+        "post-install-cmd": "Sanpi\\TwitterBootstrap\\Composer\\ScriptHandler::postInstall",
+        "post-update-cmd": "Sanpi\\TwitterBootstrap\\Composer\\ScriptHandler::postUpdate"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "0.0-dev"
-        }
+        },
+        "symfony-web-dir": "web"
     }
 }
