--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,6 @@
         "branch-alias": {
             "dev-master": "0.0-dev"
         },
-        "symfony-web-dir": "web"
+        "symfony-web-dir": "assets"
     }
 }
