--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
             "homepage": "https://redaktorcms.com"
         }
     ],
+    "repositories": [{ "type": "composer", "url": "https://raw.github.com/superdweebie/dojo/master" }],
     "require": {
         "php": ">=5.3.2",
         "redaktor/depot": "dev-master",
         "twitter/bootstrap": "v2.3.1",
-        "sanpi/twitter-bootstrap-installer": "dev-master"
+        "sanpi/twitter-bootstrap-installer": "dev-master",
+        "superdweebie/dojo" : "1.8.3"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
