--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
             "homepage": "https://redaktorcms.com"
         }
     ],
+    "repositories": [{ "type": "composer", "url": "https://raw.github.com/superdweebie/dojo/master" }],
     "require": {
         "php": ">=5.3.2",
         "redaktor/depot": "dev-master",
-        "fort-awesome/font-awesome" : "3.0.1"
+        "twitter/bootstrap": "v2.3.1",
+        "sanpi/twitter-bootstrap-installer": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
@@ -22,6 +24,10 @@
     },
     "autoload": {
         "psr-0": { "Depot": "src" }
+    },
+    "scripts": {
+        "post-install-cmd": "Sanpi\\TwitterBootstrap\\Composer\\ScriptHandler::postInstall",
+        "post-update-cmd": "Sanpi\\TwitterBootstrap\\Composer\\ScriptHandler::postUpdate"
     },
     "extra": {
         "branch-alias": {
